codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"  Would you like to run the following command?                                  "
"                                                                                "
"  Reason: this is a test reason such as one that would be produced by the       "
"  model                                                                         "
"                                                                                "
"  $ echo 'hello world'                                                          "
"                                                                                "
"› 1. Yes, proceed                                                               "
"  2. Yes, and don't ask again for this command                                  "
"  3. No, and tell Codex what to do differently esc                              "
"                                                                                "
"  Press Enter to confirm or esc to cancel                                       "
