codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_after_final_agent_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p codex-core
  └ (waited)

• Final response.

• Turn complete
